--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-scikit-learn==1.0.2
-streamlit==1.29.0
-pandas==2.1.3
-numpy==1.17.3
-altair<6
-matplotlib==3.7.4
-seaborn==0.12.2
-imbalance-learn==0.12.0
-joblib==1.1.1
-pickle==4.0
+scikit-learn
+streamlit
+pandas
+numpy
+altair
+matplotlib
+seaborn
+imbalance-learn
+joblib
+pickle
